# earningscall-copilot

./: .gitignore  README.md  analyst.py  audio.py  env.example  logger.py  main.py  pyproject.toml  run.bat  transcriber.py
prompts/: metrics.md  summary.md  whisper-initial-en.md  whisper-initial-ko.md  whisper-initial.md
static/: index.html  keywords.js
