[project]
name = "earningscall-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "websockets==13.0",
    "sounddevice==0.5.0",
    "numpy==1.26.4",
    "faster-whisper==1.0.3",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "pywebview",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
